--- a/index.html
+++ b/index.html
@@ -96,8 +96,8 @@ Not end up on Fortune 500, or whatever it's called, but to support myself; prefe
 
 [FILES]
 
-- [<a href="files/gaming/roleplaying.html">roleplaying.html</a>]
-- [<a href="files/gaming/OpenGLReference.pdf">OpenGLReference.pdf</a>]
+- [<a href="files/gaming/roleplaying.html">roleplaying.html</a>] (20130923)
+- [<a href="files/gaming/OpenGLReference.pdf">OpenGLReference.pdf</a>] (20071214)
 
 <strong>(2001)</strong>
   Some photos from issue 5/2001 of PC Pelaaja, a Finnish gaming magazine I used to read and buy for the demo discs. Diablo, Quake, and Fallout were familiar games, but Gorkamorka I had never heard of, and Venom I got to see long before I ever played and fell in love with STALKER: Shadow of Chernobyl.
@@ -186,10 +186,10 @@ Not end up on Fortune 500, or whatever it's called, but to support myself; prefe
 
 [FILES]
 
-- [<a href="files/computing/STDMBR.zip">STDMBR.zip</a>]
-- [<a href="files/computing/verilog_hdl.pdf">verilog_hdl.pdf</a>]
-- [<a href="files/computing/l4-x2-r6.pdf">l4-x2-r6.pdf</a>]
-- [<a href="files/computing/vgabios.pdf">vgabios.pdf</a>]
+- [<a href="files/computing/STDMBR.zip">STDMBR.zip</a>] (20070527)
+- [<a href="files/computing/verilog_hdl.pdf">verilog_hdl.pdf</a>] (20080313)
+- [<a href="files/computing/l4-x2-r6.pdf">l4-x2-r6.pdf</a>] (20100427)
+- [<a href="files/computing/vgabios.pdf">vgabios.pdf</a>] (20081002)
 
 [LINKS]
 
@@ -237,8 +237,8 @@ Not end up on Fortune 500, or whatever it's called, but to support myself; prefe
 
 [FILES]
 
-- [<a href="files/language/lex_iefin.html">lex_iefin.html</a>]
-- [<a href="files/language/Pre-Finnic vocabulary.htm">Pre-Finnic vocabulary.htm</a>]
+- [<a href="files/language/lex_iefin.html">lex_iefin.html</a>] (20121212)
+- [<a href="files/language/Pre-Finnic vocabulary.htm">Pre-Finnic vocabulary.htm</a>] (20141229)
 
 [NOTES]
 
