--- a/index.html
+++ b/index.html
@@ -96,9 +96,6 @@ Not end up on Fortune 500, or whatever it's called, but to support myself; prefe
 
 [FILES]
 
-- [<a href="files/gaming/roleplaying.html">roleplaying.html</a>] (20130923)
-- [<a href="files/gaming/OpenGLReference.pdf">OpenGLReference.pdf</a>] (20071214)
-
 <strong>(2001)</strong>
   Some photos from issue 5/2001 of PC Pelaaja, a Finnish gaming magazine I used to read and buy for the demo discs. Diablo, Quake, and Fallout were familiar games, but Gorkamorka I had never heard of, and Venom I got to see long before I ever played and fell in love with STALKER: Shadow of Chernobyl.
   This might also have been when I became somewhat interested in "AI" for games, trying to make entities work as intended, but I was still far too young to really understand those concepts: it just seemed cool.
@@ -186,11 +183,6 @@ Not end up on Fortune 500, or whatever it's called, but to support myself; prefe
 
 [FILES]
 
-- [<a href="files/computing/STDMBR.zip">STDMBR.zip</a>] (20070527)
-- [<a href="files/computing/verilog_hdl.pdf">verilog_hdl.pdf</a>] (20080313)
-- [<a href="files/computing/l4-x2-r6.pdf">l4-x2-r6.pdf</a>] (20100427)
-- [<a href="files/computing/vgabios.pdf">vgabios.pdf</a>] (20081002)
-
 [LINKS]
 
 - [<a href="http://www.textfiles.com/programming/CARDS/">Bowen's Instruction Summary Cards</a>]
@@ -237,8 +229,8 @@ Not end up on Fortune 500, or whatever it's called, but to support myself; prefe
 
 [FILES]
 
-- [<a href="files/language/lex_iefin.html">lex_iefin.html</a>] (20121212)
-- [<a href="files/language/Pre-Finnic vocabulary.htm">Pre-Finnic vocabulary.htm</a>] (20141229)
+- [<a href="files/language/lex_iefin.html">lex_iefin.html</a>]
+- [<a href="files/language/Pre-Finnic vocabulary.htm">Pre-Finnic vocabulary.htm</a>]
 
 [NOTES]
 
