--- a/index.html
+++ b/index.html
@@ -74,6 +74,8 @@ I have lived (pretty much) my whole life on welfare, not by choice, and could ha
 
 Not end up on Fortune 500, or whatever it's called, but to support myself; preferrably while having fun, which is what my endeavours and my learning has been over the years, creative and trechnological.
 
+Who knows where life will take me.
+
 <strong>ARTS</strong>
 --------------------------------------------------------------------------------
 
@@ -99,18 +101,23 @@ Not end up on Fortune 500, or whatever it's called, but to support myself; prefe
 <strong>(2001)</strong>
   Some photos from issue 5/2001 of PC Pelaaja, a Finnish gaming magazine I used to read and buy for the demo discs. Diablo, Quake, and Fallout were familiar games, but Gorkamorka I had never heard of, and Venom I got to see long before I ever played and fell in love with STALKER: Shadow of Chernobyl.
   This might also have been when I became somewhat interested in "AI" for games, trying to make entities work as intended, but I was still far too young to really understand those concepts: it just seemed cool.
-  - [<a href="files/pcpelaaja/diablo.jpg">diablo.jpg</a>]
-  - [<a href="files/pcpelaaja/quake.jpg">quake.jpg</a>]
-  - [<a href="files/pcpelaaja/venom.jpg">venom.jpg</a>]
-  - [<a href="files/pcpelaaja/gorkamorka.jpg">gorkamorka.jpg</a>]
-  - [<a href="files/pcpelaaja/fallout_1.jpg">fallout_1.jpg</a>]
-  - [<a href="files/pcpelaaja/fallout_2.jpg">fallout_2.jpg</a>]
-  - [<a href="files/pcpelaaja/tekoaly_1.jpg">tekoaly_1.jpg</a>]
-  - [<a href="files/pcpelaaja/tekoaly_2.jpg">tekoaly_2.jpg</a>]
-  - [<a href="files/pcpelaaja/tekoaly_3.jpg">tekoaly_3.jpg</a>]
-  - [<a href="files/pcpelaaja/tekoaly_4.jpg">tekoaly_4.jpg</a>]
+
+- [<a href="files/pcpelaaja/diablo.jpg">diablo.jpg</a>]
+- [<a href="files/pcpelaaja/quake.jpg">quake.jpg</a>]
+- [<a href="files/pcpelaaja/venom.jpg">venom.jpg</a>]
+- [<a href="files/pcpelaaja/gorkamorka.jpg">gorkamorka.jpg</a>]
+- [<a href="files/pcpelaaja/fallout_1.jpg">fallout_1.jpg</a>]
+- [<a href="files/pcpelaaja/fallout_2.jpg">fallout_2.jpg</a>]
+- [<a href="files/pcpelaaja/tekoaly_1.jpg">tekoaly_1.jpg</a>]
+- [<a href="files/pcpelaaja/tekoaly_2.jpg">tekoaly_2.jpg</a>]
+- [<a href="files/pcpelaaja/tekoaly_3.jpg">tekoaly_3.jpg</a>]
+- [<a href="files/pcpelaaja/tekoaly_4.jpg">tekoaly_4.jpg</a>]
 
 [LINKS]
+
+Gaffer on Games is where I first delved into network code for games, before that I hadn't cared about any actual implementation, and eventually I moved on to read up on Quake 3 and its internals—Fabien Sanglard has some damn nice stuff!
+
+Because of my love for raycasters and simple 3D graphics I have also read up on a fair few documentations and discussions over the years, both theory and pages delving into practical and programmatical aspect of some of my favourite games.
 
 - [<a href="https://gafferongames.com/">Gaffer on Games</a>]
 - [<a href="https://fabiensanglard.net/quake3/network.php">Quake 3 Source Code Review: Network Model</a>]
@@ -125,7 +132,7 @@ Not end up on Fortune 500, or whatever it's called, but to support myself; prefe
 <strong>200106</strong>
   I had been slowly immersing myself in PC gaming ever since Ski or Die on DOS, familiarising myself with computers, with DOS, and slowly moving to Windows 95 and onward, finding more complicated and more immersive games in different styles. Ski or Die was the first real game I immersed myself in at school, and Doom became the great turning point in my life, making sure I was to be a gamer until I was old and grey.
 <strong>(2010-2011)</strong>
-  I have an old hard drive that broke during the second incident around 2010-2011 contains project files from before 2010, IRC logs, Miranda-IM logs, personal comments, and reference material.
+  I have an old hard drive that broke during the second incident around 2010-2011 that contains project files from before 2010, IRC logs, Miranda-IM logs, personal comments, and reference material.
   Once recovered it will help me prove even better what I have worked on and when, showing that I am not falsifying anything.
   I think it was a Western Digital My Book Essential 1 TB USB 2.0 containing a Samsung hard drive, I don't think I was using Buffalo external drives at that point in time.
 
@@ -181,14 +188,19 @@ Not end up on Fortune 500, or whatever it's called, but to support myself; prefe
 <strong>201201</strong>
    A functional programming language inspired by Lisp.
 
-[FILES]
+<strong>[FILES]</strong>
 
-[LINKS]
+<strong>[LINKS]</strong>
+
+I might still be able to find some of the material I learned from and reviewed while working on various architectures, systems, languages, and other designs in computing, but most of it might be gone. I still have a fair few reference files from the period 2000-2010, but most of those files are still locked away on the broken hard drive that I intend to send for recovery.
 
 - [<a href="http://www.textfiles.com/programming/CARDS/">Bowen's Instruction Summary Cards</a>]
+
+Alongside ballistics I also found an interest in optics and acoustics in order to simulate those aspects in first-person shooters, and ended up having some contact with Eberhard Sengpiel and his many pages and tools.
+
 - [<a href="https://sengpielaudio.com/">Forum für Mikrofonaufnahmetechnik und Tonstudiotechnik</a>]
 
-[NOTES]
+<strong>[NOTES]</strong>
 
 <strong>200602</strong>
   I enrolled at VAMK in 2004 in the hopes of ultimately working with microprocessors and instruction set architectures, but my studies suffered greatly the first year (2004-2005) due to mental health problems and by the second year (2005-2006) I was no longer in attendance. As such my dreams of working as an engineer in my field of ambition were shattered, but I intuitively started learning and designing systems on my own.
@@ -207,7 +219,7 @@ Not end up on Fortune 500, or whatever it's called, but to support myself; prefe
   - [<a href="files/ballistics/mccoy_1.jpg">mccoy_1.jpg</a>]
   - [<a href="files/ballistics/mccoy_2.jpg">mccoy_2.jpg</a>]
 <strong>(2010-2011)</strong>
-  I have an old hard drive that broke during the second incident around 2010-2011 contains project files from before 2010, IRC logs, Miranda-IM logs, personal comments, and reference material.
+  I have an old hard drive that broke during the second incident around 2010-2011 that contains project files from before 2010, IRC logs, Miranda-IM logs, personal comments, and reference material.
   Once recovered it will help me prove even better what I have worked on and when, showing that I am not falsifying anything.
   I think it was a Western Digital My Book Essential 1 TB USB 2.0 containing a Samsung hard drive, I don't think I was using Buffalo external drives at that point in time.
 
@@ -216,7 +228,7 @@ Not end up on Fortune 500, or whatever it's called, but to support myself; prefe
 
 <em>culture, language, worship</em>
 
-[LIST]
+<strong>[LIST]</strong>
 
 <strong>200305</strong>
   A serious effort to study and research our native language.
@@ -227,12 +239,14 @@ Not end up on Fortune 500, or whatever it's called, but to support myself; prefe
 <strong>201901</strong>
   A classification of all North Germanic languages based on phonological data.
 
-[FILES]
+<strong>[FILES]</strong>
+
+There is a considerable amount of loaning from Pre-Proto-Germanic and later language in Finnish, being proof of how much contact Germanic and Finno-Samic tribes had in pre-historic times.
 
 - [<a href="files/language/lex_iefin.html">lex_iefin.html</a>]
 - [<a href="files/language/Pre-Finnic vocabulary.htm">Pre-Finnic vocabulary.htm</a>]
 
-[NOTES]
+<strong>[NOTES]</strong>
 
 <strong>(1993)</strong>
   I was intrigued when we explored Nordic mythology and the Edda in primary school, already somewhat familiar with the lore from reading Valhalla by Peter Madsen. The stories stirred the imaginative mind of a child and our Nordic gods seemed like superheroes going on amazing adventures and dwelling in the world tree.
