--- a/index.html
+++ b/index.html
@@ -60,6 +60,8 @@ strong {
 <pre>
 Kenneth Forsbäck &#60;<a href="">domain</a>&#62;
 
+<em>Amateur linguist, designer, and engineer. Ostrobothnian, heathen, and gamer.</em>
+
 [NOTES]
 
 A work in progress based on project lists, on last modified times of project files, references files, and media files, on YouTube history, and on archived web pages. A whole bunch of designs and unfinished stuff that make up the first 40 years of my life, the next 40 years will go to developing these designs.
