--- a/index.html
+++ b/index.html
@@ -60,7 +60,8 @@ strong {
 <pre>
 Kenneth Forsbäck &#60;<a href="">domain</a>&#62;
 
-<em>Amateur linguist, designer, and engineer. Ostrobothnian, heathen, and gamer.</em>
+<em>Amateur linguist, designer, and engineer. Ostrobothnian, heathen, and gamer I don't inject politics and religion into everything I do.
+--- Be professional. Be heartful.</em>
 
 [NOTES]
 
