--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@ strong {
 
 <!-- pre -->
 <pre>
-Kenneth Forsbäck &#60;<a href="">domain</a>&#62;
+Kenneth Forsbäck &#60;<a href="">domain</a>&#62; (Finland)
 
 <em>Amateur linguist, designer, and engineer. Ostrobothnian, heathen, and gamer I don't inject politics and religion into everything I do.
 --- Be professional. Be heartful.</em>
