--- a/index.html
+++ b/index.html
@@ -60,8 +60,8 @@ strong {
 <pre>
 Kenneth Forsbäck &#60;<a href="">domain</a>&#62; (Finland)
 
-<em>Amateur linguist, designer, and engineer. Ostrobothnian, heathen, and gamer I don't inject politics and religion into everything I do.
---- Be professional. Be heartful.</em>
+<em>Amateur linguist, designer, and engineer. Ostrobothnian, heathen, and gamer.
+—Be professional. Be heartful.</em>
 
 [NOTES]
 
@@ -73,7 +73,7 @@ Regarding my gaming accounts, I might play like $%@! in some games, but I play f
 
 Pardon my old-school monospaced site while I try to get my life back on track, try to document my many projects and my efforts over the years, and just try to reclaim my serenity and path in life.
 
-I have lived (pretty much) my whole life on welfare, not by choice, and could have had a pretty decent life if it weren't for a few incidents in my life and certain destructive people (no, I'm not "progressive"). Ever since I was 16 years old and suffered something unfortunate I have waited for and attempted to build for a contentful life where I could actually support myself.
+I have lived (pretty much) my whole life on welfare, not by choice, and could have had a pretty decent life if it weren't for a few incidents in my life and certain toxic and destructive people (no, I'm not "progressive"). Ever since I was 16 years old and suffered something unfortunate I have waited for and attempted to build for a contentful life where I could actually support myself.
 
 Not end up on Fortune 500, or whatever it's called, but to support myself; preferrably while having fun, which is what my endeavours and my learning has been over the years, creative and trechnological.
 
@@ -118,6 +118,8 @@ Who knows where life will take me.
 
 [LINKS]
 
+- [<a href="https://www.rpg.net/">https://www.rpg.net/</a>]
+
 Gaffer on Games is where I first delved into network code for games, before that I hadn't cared about any actual implementation, and eventually I moved on to read up on Quake 3 and its internals—Fabien Sanglard has some damn nice stuff!
 
 Because of my love for raycasters and simple 3D graphics I have also read up on a fair few documentations and discussions over the years, both theory and pages delving into practical and programmatical aspect of some of my favourite games.
@@ -134,6 +136,26 @@ Because of my love for raycasters and simple 3D graphics I have also read up on 
   I was first introduced to the NES at my cousin and later the Atari 2600 at a friend, both in the early 90s, both of which helped me embrace gaming and were my first introduction to consoles.
 <strong>200106</strong>
   I had been slowly immersing myself in PC gaming ever since Ski or Die on DOS, familiarising myself with computers, with DOS, and slowly moving to Windows 95 and onward, finding more complicated and more immersive games in different styles. Ski or Die was the first real game I immersed myself in at school, and Doom became the great turning point in my life, making sure I was to be a gamer until I was old and grey.
+<strong>(2001-2002)</strong>
+  I began using IRC and quakenet.org.
+<strong>200201</strong>
+  I joined gamedev.net (blueangel).
+<strong>200303</strong>
+  I joined gamedev.net (unsigned_int).
+<strong>200407</strong>
+  I joined irrlicht.sourceforge.io (stalefish).
+<strong>200411</strong>
+  I joined devmaster.net (stalefish).
+<strong>200508</strong>
+  I joined gamedev.net (keke).
+<strong>200705</strong>
+  I joined gamedev.net (kenna).
+<strong>200705</strong>
+  I joined irrlicht.sourceforge.io (kenna).
+<strong>200803</strong>
+  I joined gamedev.net (tuoni).
+<strong>200906</strong>
+  I joined irrlicht.sourceforge.io (kenneth).
 <strong>(2010-2011)</strong>
   I have an old hard drive that broke during the second incident around 2010-2011 that contains project files from before 2010, IRC logs, Miranda-IM logs, personal comments, and reference material.
   Once recovered it will help me prove even better what I have worked on and when, showing that I am not falsifying anything.
@@ -268,9 +290,13 @@ There is a considerable amount of loaning from Pre-Proto-Germanic and later lang
 <strong>200501</strong>
   I attended my grandfather's burial as he had recently died and a small piece of me sprouted from the seed that might have been planted already when I was a child. At the graveyard the priest talked to me and asked me how I was feeling, unknowing that I had been dealing with mental unhealth since long before this and my grandfather's death was not the reason for my apparent mood.
   It was still too early, I was not yet ready, but I ended up mentioning that I would have wanted to pour a cup of ale for my grandfather, that I didn't feel comfortable with the wake.
+<strong>(2006-2007)</strong>
+  I joined langmaker.com.
 <strong>201112</strong>
   I had been working with my native language long enough, going so far as to immerse myself in Old Norse, Proto-Germanic, and Proto-Indo-European, trying to determine the development of our language and slowly beginning to realise that it might not be just a Swedish dialect as conventionally classified.
   As such my intentions for standardisation, regulation, and formal recognition in Finland began to slowly grow, and I also found it relevant to try and classify our language and its relatives.
+<strong>201312</strong>
+  I jointed linguistforum.com (freknu).
 <strong>201202</strong>
   I began working on my own standardisation of writing, having used the colloquial systems before this.
 <strong>201202</strong>
