--- a/index.html
+++ b/index.html
@@ -139,23 +139,11 @@ Because of my love for raycasters and simple 3D graphics I have also read up on 
 <strong>(2001-2002)</strong>
   I began using IRC and quakenet.org.
 <strong>200201</strong>
-  I joined gamedev.net (blueangel).
-<strong>200303</strong>
-  I joined gamedev.net (unsigned_int).
+  I began to use gamedev.net.
 <strong>200407</strong>
-  I joined irrlicht.sourceforge.io (stalefish).
+  I began to use irrlicht.sourceforge.io.
 <strong>200411</strong>
-  I joined devmaster.net (stalefish).
-<strong>200508</strong>
-  I joined gamedev.net (keke).
-<strong>200705</strong>
-  I joined gamedev.net (kenna).
-<strong>200705</strong>
-  I joined irrlicht.sourceforge.io (kenna).
-<strong>200803</strong>
-  I joined gamedev.net (tuoni).
-<strong>200906</strong>
-  I joined irrlicht.sourceforge.io (kenneth).
+  I began to use devmaster.net.
 <strong>(2010-2011)</strong>
   I have an old hard drive that broke during the second incident around 2010-2011 that contains project files from before 2010, IRC logs, Miranda-IM logs, personal comments, and reference material.
   Once recovered it will help me prove even better what I have worked on and when, showing that I am not falsifying anything.
@@ -291,12 +279,12 @@ There is a considerable amount of loaning from Pre-Proto-Germanic and later lang
   I attended my grandfather's burial as he had recently died and a small piece of me sprouted from the seed that might have been planted already when I was a child. At the graveyard the priest talked to me and asked me how I was feeling, unknowing that I had been dealing with mental unhealth since long before this and my grandfather's death was not the reason for my apparent mood.
   It was still too early, I was not yet ready, but I ended up mentioning that I would have wanted to pour a cup of ale for my grandfather, that I didn't feel comfortable with the wake.
 <strong>(2006-2007)</strong>
-  I joined langmaker.com.
+  I began to use langmaker.com.
 <strong>201112</strong>
   I had been working with my native language long enough, going so far as to immerse myself in Old Norse, Proto-Germanic, and Proto-Indo-European, trying to determine the development of our language and slowly beginning to realise that it might not be just a Swedish dialect as conventionally classified.
   As such my intentions for standardisation, regulation, and formal recognition in Finland began to slowly grow, and I also found it relevant to try and classify our language and its relatives.
 <strong>201312</strong>
-  I jointed linguistforum.com (freknu).
+  I began to use linguistforum.com.
 <strong>201202</strong>
   I began working on my own standardisation of writing, having used the colloquial systems before this.
 <strong>201202</strong>
