--- a/index.html
+++ b/index.html
@@ -63,6 +63,14 @@ Kenneth Forsbäck &#60;<a href="">domain</a>&#62; (Finland)
 <em>Amateur linguist, designer, and engineer. Ostrobothnian, heathen, and gamer.
 —Be professional. Be heartful.</em>
 
+[DOMAINS]
+
+- <a href="#arts">arts</a> (games and stories)
+- <a href="#science">science</a> (computing and networking)
+- <a href="#heritage">heritage</a> (culture and language)
+
+[ENDEAVOURS]
+
 [NOTES]
 
 A work in progress based on project lists, on last modified times of project files, references files, and media files, on YouTube history, and on archived web pages. A whole bunch of designs and unfinished stuff that make up the first 40 years of my life, the next 40 years will go to developing these designs.
@@ -79,7 +87,7 @@ Not end up on Fortune 500, or whatever it's called, but to support myself; prefe
 
 Who knows where life will take me.
 
-<strong>ARTS</strong>
+<span id="arts"><strong>ARTS</strong></span>
 --------------------------------------------------------------------------------
 
 <em>games, computer, tabletop, athletic, stories, writing, drawing</em>
@@ -90,6 +98,8 @@ Who knows where life will take me.
   A first-person shooter designed around weapons with customisation and attachments inspired by Firearms (Half-Life) (1998).
 <strong>200402</strong>
   A first-person space simulator, focused on exploration and combat and with seamless travel from surface to space and between planets, inspired by Freelancer (2003).
+<strong>200506 (longplay)</strong>
+  A software environment and user experience inspired by the PlayStation 2. Intended to bring the console experience to PC, allowing games to be played on a PC like on a console, with a game manager, game library, and a fullscreen interface similar to a console.
 <strong>200602</strong>
   A first-person space simulator, focused on various careers in space and running your own company or faction, inspired by Freelancer (2003), Planetes (2003), and EVE Online (2003).
 <strong>201406</strong>
@@ -149,7 +159,7 @@ Because of my love for raycasters and simple 3D graphics I have also read up on 
   Once recovered it will help me prove even better what I have worked on and when, showing that I am not falsifying anything.
   I think it was a Western Digital My Book Essential 1 TB USB 2.0 containing a Samsung hard drive, I don't think I was using Buffalo external drives at that point in time.
 
-<strong>SCIENCE</strong>
+<span id="science"><strong>SCIENCE</strong></spanm>
 --------------------------------------------------------------------------------
 
 <em>computing, information, networking, communication</em>
@@ -236,7 +246,7 @@ Alongside ballistics I also found an interest in optics and acoustics in order t
   Once recovered it will help me prove even better what I have worked on and when, showing that I am not falsifying anything.
   I think it was a Western Digital My Book Essential 1 TB USB 2.0 containing a Samsung hard drive, I don't think I was using Buffalo external drives at that point in time.
 
-<strong>HERITAGE</strong>
+<span id="heritage"><strong>HERITAGE</strong></span>
 --------------------------------------------------------------------------------
 
 <em>culture, language, worship</em>
