--- a/index.html
+++ b/index.html
@@ -100,6 +100,7 @@ Who knows where life will take me.
   A first-person space simulator, focused on exploration and combat and with seamless travel from surface to space and between planets, inspired by Freelancer (2003).
 <strong>200506 (longplay)</strong>
   A software environment and user experience inspired by the PlayStation 2. Intended to bring the console experience to PC, allowing games to be played on a PC like on a console, with a game manager, game library, and a fullscreen interface similar to a console.
+  - <a href="files/longplay.jpg">longplay.jpg</a>
 <strong>200602</strong>
   A first-person space simulator, focused on various careers in space and running your own company or faction, inspired by Freelancer (2003), Planetes (2003), and EVE Online (2003).
 <strong>201406</strong>
@@ -192,6 +193,8 @@ Because of my love for raycasters and simple 3D graphics I have also read up on 
   Revisions and patches are mounted after the base to allow for simple modification and updates without always having to change the base image.
 <strong>200612</strong>
   A system for volume partitioning and management inspired by MBR.
+<strong>200712</strong>
+  An array processing unit for a modular architecture.
 <strong>200705</strong>
   An 8-bit variable-length RISC architecture inspired by Z80 and 6800.
 <strong>200712</strong>
@@ -199,11 +202,15 @@ Because of my love for raycasters and simple 3D graphics I have also read up on 
 <strong>200712</strong>
   A tripartite system of machine-readable object code, being bit code, byte code, and type code, inspired by Lua byte code.
 <strong>200803</strong>
+  A system processing unit for a modular architecture.
+<strong>200803</strong>
   A hardware description language inspired by Verilog.
 <strong>200803</strong>
   An 8-bit fixed-length MISC architecture inspired by Z80 and 6800.
 <strong>200803</strong>
   A director with directives and directive files for monitoring and management of compilation inspired by C and make.
+<strong>200803</strong>
+  A 4-bit MISC architecture inspired by MOS Technology 6502 and Intel 8080.
 <strong>200804</strong>
   A data description language inspired by C.
 <strong>201111</strong>
@@ -211,9 +218,9 @@ Because of my love for raycasters and simple 3D graphics I have also read up on 
 <strong>201201</strong>
    A functional programming language inspired by Lisp.
 
-<strong>[FILES]</strong>
+[FILES]
 
-<strong>[LINKS]</strong>
+[LINKS]
 
 I might still be able to find some of the material I learned from and reviewed while working on various architectures, systems, languages, and other designs in computing, but most of it might be gone. I still have a fair few reference files from the period 2000-2010, but most of those files are still locked away on the broken hard drive that I intend to send for recovery.
 
@@ -223,7 +230,7 @@ Alongside ballistics I also found an interest in optics and acoustics in order t
 
 - [<a href="https://sengpielaudio.com/">Forum für Mikrofonaufnahmetechnik und Tonstudiotechnik</a>]
 
-<strong>[NOTES]</strong>
+[NOTES]
 
 <strong>200602</strong>
   I enrolled at VAMK in 2004 in the hopes of ultimately working with microprocessors and instruction set architectures, but my studies suffered greatly the first year (2004-2005) due to mental health problems and by the second year (2005-2006) I was no longer in attendance. As such my dreams of working as an engineer in my field of ambition were shattered, but I intuitively started learning and designing systems on my own.
@@ -251,7 +258,7 @@ Alongside ballistics I also found an interest in optics and acoustics in order t
 
 <em>culture, language, worship</em>
 
-<strong>[LIST]</strong>
+[LIST]
 
 <strong>200305</strong>
   A serious effort to study and research our native language.
@@ -262,14 +269,18 @@ Alongside ballistics I also found an interest in optics and acoustics in order t
 <strong>201901</strong>
   A classification of all North Germanic languages based on phonological data.
 
-<strong>[FILES]</strong>
+[FILES]
 
-There is a considerable amount of loaning from Pre-Proto-Germanic and later language in Finnish, being proof of how much contact Germanic and Finno-Samic tribes had in pre-historic times.
+There is a considerable amount of loaning from Pre-Proto-Germanic and later languages in Finnish, being proof of how much contact Germanic and Finno-Samic tribes had in pre-historic times.
+
+Finno-Samic tribes and their languages would most likely have lived on the southern coast of Finland, around lake Ladoga, and in Estonia, and for such contact with Germanic tribes to have taken place the Germanic tribes would either have had to have maintained extensive sea trade or to have lived close to these Finno-Samic tribes.
+
+Loans in Finno-Samic from Indo-European, Indo-Iranian, and Balto-Slavic is consistent with movement of the Finno-Samic tribes and their Indo-European counterparts, indicating contact in trade, culture, and technology. Germanic contact is the only subject that remains controversial and lacking recognition, and would most likely require a reintepretation of ancient history of the North.
 
 - [<a href="files/language/lex_iefin.html">lex_iefin.html</a>]
 - [<a href="files/language/Pre-Finnic vocabulary.htm">Pre-Finnic vocabulary.htm</a>]
 
-<strong>[NOTES]</strong>
+[NOTES]
 
 <strong>(1993)</strong>
   I was intrigued when we explored Nordic mythology and the Edda in primary school, already somewhat familiar with the lore from reading Valhalla by Peter Madsen. The stories stirred the imaginative mind of a child and our Nordic gods seemed like superheroes going on amazing adventures and dwelling in the world tree.
