--- a/index.html
+++ b/index.html
@@ -100,6 +100,7 @@ Who knows where life will take me.
   A first-person space simulator, focused on exploration and combat and with seamless travel from surface to space and between planets, inspired by Freelancer (2003).
 <strong>200506 (longplay)</strong>
   A software environment and user experience inspired by the PlayStation 2. Intended to bring the console experience to PC, allowing games to be played on a PC like on a console, with a game manager, game library, and a fullscreen interface similar to a console.
+  I discussed it with some friends on IRC, Mirand-IM, and some friends from GameDev and a programming site I don't remember, but they thought it was silly and not worth the effort.
   - <a href="files/longplay.jpg">longplay.jpg</a>
 <strong>200602</strong>
   A first-person space simulator, focused on various careers in space and running your own company or faction, inspired by Freelancer (2003), Planetes (2003), and EVE Online (2003).
