--- a/index.html
+++ b/index.html
@@ -68,6 +68,7 @@ Kenneth Forsbäck &#60;<a href="">domain</a>&#62; (Finland)
 - <a href="#arts">arts</a> (games and stories)
 - <a href="#science">science</a> (computing and networking)
 - <a href="#heritage">heritage</a> (culture and language)
+- <a href="#endeavourheritage">endeavour</a>
 
 [ENDEAVOURS]
 
@@ -87,6 +88,24 @@ Not end up on Fortune 500, or whatever it's called, but to support myself; prefe
 
 Who knows where life will take me.
 
+<span id="endeavour"><strong>ENDEAVOUR</strong></span>
+--------------------------------------------------------------------------------
+
+[<a href="https://www.youtube.com/watch?v=D9BKjn5fxG8&list=PLBAW818DX-NSKHy6XcayLG07w7mzfkCO8">Project Folders</a>]
+[<a href="https://www.youtube.com/watch?v=nCIjG9iOwPk&list=PLBAW818DX-NSKHy6XcayLG07w7mzfkCO8">Concept Lists</a>]
+[<a href="https://www.youtube.com/watch?v=3Evp25jCIv4&list=PLBAW818DX-NSKHy6XcayLG07w7mzfkCO8">Master Documents - Part 1</a>]
+[<a href="https://www.youtube.com/watch?v=4TgI6hMGvzs&list=PLBAW818DX-NSKHy6XcayLG07w7mzfkCO8">Master Documents - Part 2</a>]
+[<a href="https://www.youtube.com/watch?v=ANBR-VnTFFw&list=PLBAW818DX-NSKHy6XcayLG07w7mzfkCO8">Master Documents - Part 3</a>]
+[<a href="https://www.youtube.com/watch?v=2h6CUa7Voc4&list=PLBAW818DX-NSKHy6XcayLG07w7mzfkCO8">File Statistics</a>]
+[<a href="https://www.youtube.com/watch?v=-Oxkt8J4YLc&list=PLBAW818DX-NSKHy6XcayLG07w7mzfkCO8">QuakeNet - Part 1</a>]
+[<a href="https://www.youtube.com/watch?v=ZU59AUMuOR8&list=PLBAW818DX-NSKHy6XcayLG07w7mzfkCO8">GameDev - Part 1</a>]
+[<a href="https://www.youtube.com/watch?v=1HPEl3wZ-GY&list=PLBAW818DX-NSKHy6XcayLG07w7mzfkCO8">QuakeNet - Part 2</a>]
+[<a href="https://www.youtube.com/watch?v=ngojHfgbYuo&list=PLBAW818DX-NSKHy6XcayLG07w7mzfkCO8">GameDev - Part 2</a>]
+[<a href="https://www.youtube.com/watch?v=SEeTVrwPi4g&list=PLBAW818DX-NSKHy6XcayLG07w7mzfkCO8">Network</a>]
+[<a href="https://www.youtube.com/watch?v=YyNJBH0hHUE&list=PLBAW818DX-NSKHy6XcayLG07w7mzfkCO8">Backup - Part 1</a>]
+[<a href="https://www.youtube.com/watch?v=psVQu6ZmoWU&list=PLBAW818DX-NSKHy6XcayLG07w7mzfkCO8">Backup - Part 2</a>]
+[<a href="https://www.youtube.com/watch?v=S2wJrHYElyk&list=PLBAW818DX-NSKHy6XcayLG07w7mzfkCO8">Backup - Part 3</a>]
+
 <span id="arts"><strong>ARTS</strong></span>
 --------------------------------------------------------------------------------
 
@@ -101,7 +120,7 @@ Who knows where life will take me.
 <strong>200506 (longplay)</strong>
   A software environment and user experience inspired by the PlayStation 2. Intended to bring the console experience to PC, allowing games to be played on a PC like on a console, with a game manager, game library, and a fullscreen interface similar to a console.
   I discussed it with some friends on IRC, Mirand-IM, and some friends from GameDev and a programming site I don't remember, but they thought it was silly and not worth the effort.
-  - <a href="files/longplay.jpg">longplay.jpg</a>
+  [<a href="files/longplay.jpg">longplay.jpg</a>]
 <strong>200602</strong>
   A first-person space simulator, focused on various careers in space and running your own company or faction, inspired by Freelancer (2003), Planetes (2003), and EVE Online (2003).
 <strong>201406</strong>
@@ -117,16 +136,16 @@ Who knows where life will take me.
   Some photos from issue 5/2001 of PC Pelaaja, a Finnish gaming magazine I used to read and buy for the demo discs. Diablo, Quake, and Fallout were familiar games, but Gorkamorka I had never heard of, and Venom I got to see long before I ever played and fell in love with STALKER: Shadow of Chernobyl.
   This might also have been when I became somewhat interested in "AI" for games, trying to make entities work as intended, but I was still far too young to really understand those concepts: it just seemed cool.
 
-- [<a href="files/pcpelaaja/diablo.jpg">diablo.jpg</a>]
-- [<a href="files/pcpelaaja/quake.jpg">quake.jpg</a>]
-- [<a href="files/pcpelaaja/venom.jpg">venom.jpg</a>]
-- [<a href="files/pcpelaaja/gorkamorka.jpg">gorkamorka.jpg</a>]
-- [<a href="files/pcpelaaja/fallout_1.jpg">fallout_1.jpg</a>]
-- [<a href="files/pcpelaaja/fallout_2.jpg">fallout_2.jpg</a>]
-- [<a href="files/pcpelaaja/tekoaly_1.jpg">tekoaly_1.jpg</a>]
-- [<a href="files/pcpelaaja/tekoaly_2.jpg">tekoaly_2.jpg</a>]
-- [<a href="files/pcpelaaja/tekoaly_3.jpg">tekoaly_3.jpg</a>]
-- [<a href="files/pcpelaaja/tekoaly_4.jpg">tekoaly_4.jpg</a>]
+[<a href="files/pcpelaaja/diablo.jpg">diablo.jpg</a>]
+[<a href="files/pcpelaaja/quake.jpg">quake.jpg</a>]
+[<a href="files/pcpelaaja/venom.jpg">venom.jpg</a>]
+[<a href="files/pcpelaaja/gorkamorka.jpg">gorkamorka.jpg</a>]
+[<a href="files/pcpelaaja/fallout_1.jpg">fallout_1.jpg</a>]
+[<a href="files/pcpelaaja/fallout_2.jpg">fallout_2.jpg</a>]
+[<a href="files/pcpelaaja/tekoaly_1.jpg">tekoaly_1.jpg</a>]
+[<a href="files/pcpelaaja/tekoaly_2.jpg">tekoaly_2.jpg</a>]
+[<a href="files/pcpelaaja/tekoaly_3.jpg">tekoaly_3.jpg</a>]
+[<a href="files/pcpelaaja/tekoaly_4.jpg">tekoaly_4.jpg</a>]
 
 [LINKS]
 
@@ -136,9 +155,9 @@ Gaffer on Games is where I first delved into network code for games, before that
 
 Because of my love for raycasters and simple 3D graphics I have also read up on a fair few documentations and discussions over the years, both theory and pages delving into practical and programmatical aspect of some of my favourite games.
 
-- [<a href="https://gafferongames.com/">Gaffer on Games</a>]
-- [<a href="https://fabiensanglard.net/quake3/network.php">Quake 3 Source Code Review: Network Model</a>]
-- [<a href="https://fabiensanglard.net/duke3d/build_engine_internals.php">Duke Nukem 3D: Build Engine Internals</a>]
+[<a href="https://gafferongames.com/">Gaffer on Games</a>]
+[<a href="https://fabiensanglard.net/quake3/network.php">Quake 3 Source Code Review: Network Model</a>]
+[<a href="https://fabiensanglard.net/duke3d/build_engine_internals.php">Duke Nukem 3D: Build Engine Internals</a>]
 
 [NOTES]
 
@@ -225,11 +244,11 @@ Because of my love for raycasters and simple 3D graphics I have also read up on 
 
 I might still be able to find some of the material I learned from and reviewed while working on various architectures, systems, languages, and other designs in computing, but most of it might be gone. I still have a fair few reference files from the period 2000-2010, but most of those files are still locked away on the broken hard drive that I intend to send for recovery.
 
-- [<a href="http://www.textfiles.com/programming/CARDS/">Bowen's Instruction Summary Cards</a>]
+[<a href="http://www.textfiles.com/programming/CARDS/">Bowen's Instruction Summary Cards</a>]
 
 Alongside ballistics I also found an interest in optics and acoustics in order to simulate those aspects in first-person shooters, and ended up having some contact with Eberhard Sengpiel and his many pages and tools.
 
-- [<a href="https://sengpielaudio.com/">Forum für Mikrofonaufnahmetechnik und Tonstudiotechnik</a>]
+[<a href="https://sengpielaudio.com/">Forum für Mikrofonaufnahmetechnik und Tonstudiotechnik</a>]
 
 [NOTES]
 
@@ -240,15 +259,15 @@ Alongside ballistics I also found an interest in optics and acoustics in order t
 <strong>200812</strong>
   I stumbled across Steven Faber's web site around 2008 and came to exchange some e-mails with him, wanting to learn ballistics. Before this I had attempted to use rather crude equations that worked as long as you guessed and tweaked the variables correctly, but I was interested in something more accurate.
   He might also have been the one to recommend me McCoy's "bible" on ballistics which I later ended up buying on Amazon. While I lacked, and still lack, the mathematical knowledge to fully make use of all equations, I managed to learn what I needed.
-  - [<a href="files/ballistics/coppock_theory.pdf">coppock_theory.pdf</a>]
-  - [<a href="files/ballistics/coppock_model.pdf">coppock_model.pdf</a>]
-  - [<a href="files/ballistics/coppock_theory.jpg">coppock_theory.jpg</a>]
-  - [<a href="files/ballistics/coppock_model.jpg">coppock_model.jpg</a>]
-  - [<a href="files/ballistics/le_duc_model.jpg">le_duc_model.jpg</a>]
-  - [<a href="files/ballistics/powley_formulas.jpg">powley_formulas.jpg</a>]
-  - [<a href="files/ballistics/pressure_curve.jpg">pressure_curve.jpg</a>]
-  - [<a href="files/ballistics/mccoy_1.jpg">mccoy_1.jpg</a>]
-  - [<a href="files/ballistics/mccoy_2.jpg">mccoy_2.jpg</a>]
+  [<a href="files/ballistics/coppock_theory.pdf">coppock_theory.pdf</a>]
+  [<a href="files/ballistics/coppock_model.pdf">coppock_model.pdf</a>]
+  [<a href="files/ballistics/coppock_theory.jpg">coppock_theory.jpg</a>]
+  [<a href="files/ballistics/coppock_model.jpg">coppock_model.jpg</a>]
+  [<a href="files/ballistics/le_duc_model.jpg">le_duc_model.jpg</a>]
+  [<a href="files/ballistics/powley_formulas.jpg">powley_formulas.jpg</a>]
+  [<a href="files/ballistics/pressure_curve.jpg">pressure_curve.jpg</a>]
+  [<a href="files/ballistics/mccoy_1.jpg">mccoy_1.jpg</a>]
+  [<a href="files/ballistics/mccoy_2.jpg">mccoy_2.jpg</a>]
 <strong>(2010-2011)</strong>
   I have an old hard drive that broke during the second incident around 2010-2011 that contains project files from before 2010, IRC logs, Miranda-IM logs, personal comments, and reference material.
   Once recovered it will help me prove even better what I have worked on and when, showing that I am not falsifying anything.
@@ -278,8 +297,8 @@ Finno-Samic tribes and their languages would most likely have lived on the south
 
 Loans in Finno-Samic from Indo-European, Indo-Iranian, and Balto-Slavic is consistent with movement of the Finno-Samic tribes and their Indo-European counterparts, indicating contact in trade, culture, and technology. Germanic contact is the only subject that remains controversial and lacking recognition, and would most likely require a reintepretation of ancient history of the North.
 
-- [<a href="files/language/lex_iefin.html">lex_iefin.html</a>]
-- [<a href="files/language/Pre-Finnic vocabulary.htm">Pre-Finnic vocabulary.htm</a>]
+[<a href="files/language/lex_iefin.html">lex_iefin.html</a>]
+[<a href="files/language/Pre-Finnic vocabulary.htm">Pre-Finnic vocabulary.htm</a>]
 
 [NOTES]
 
