--- a/index.html
+++ b/index.html
@@ -60,8 +60,9 @@ strong {
 <pre>
 Kenneth Forsbäck &#60;<a href="">domain</a>&#62; (Finland)
 
-<em>Amateur linguist, designer, and engineer. Ostrobothnian, heathen, and gamer.
-—Be professional. Be heartful.</em>
+<em>Ostrobothnian, heathen, and gamer. An amateur designer and engineer, with specialisation in system design. A native expert, with specialisation in linguistics.</em>
+
+<em>Be professional. Be heartful.</em>
 
 [DOMAINS]
 
@@ -149,7 +150,7 @@ Who knows where life will take me.
 
 [LINKS]
 
-- [<a href="https://www.rpg.net/">https://www.rpg.net/</a>]
+[<a href="https://www.rpg.net/">https://www.rpg.net/</a>]
 
 Gaffer on Games is where I first delved into network code for games, before that I hadn't cared about any actual implementation, and eventually I moved on to read up on Quake 3 and its internals—Fabien Sanglard has some damn nice stuff!
 
