--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@ strong {
 <pre>
 Kenneth Forsbäck &#60;<a href="">domain</a>&#62; (Finland)
 
-<em>Ostrobothnian, heathen, and gamer. An amateur designer and engineer, with specialisation in system design. A native expert, with specialisation in linguistics.</em>
+<em>Ostrobothnian, heathen, and gamer. An amateur designer and engineer in gaming and computing, with specialisation in system design. A native expert, with specialisation in linguistics.</em>
 
 <em>Be professional. Be heartful.</em>
 
