--- a/index.html
+++ b/index.html
@@ -64,12 +64,21 @@ Kenneth Forsbäck &#60;<a href="">domain</a>&#62; (Finland)
 
 <em>Be professional. Be heartful.</em>
 
+[ACCOUNTS]
+
+(I need to get a domain to centre everything around, that'll make my life easier and make for less accounts and less mess)
+
+[<a href="https://x.com/forsbackkenneth">Kenneth Forsbäck</a>], X (might remove this)
+[<a href="https://gamedev.net/kforsback/">Kenneth Forsbäck</a>], GameDev
+[<a href="https://x.com/aspootifulmind">A Spootiful Mind</a>], X
+[<a href="https://www.youtube.com/@ASpootifulMind">A Spootiful Mind</a>], YouTube
+
 [DOMAINS]
 
-- <a href="#arts">arts</a> (games and stories)
-- <a href="#science">science</a> (computing and networking)
-- <a href="#heritage">heritage</a> (culture and language)
-- <a href="#endeavourheritage">endeavour</a>
+<a href="#arts">arts</a> (games and stories)
+<a href="#science">science</a> (computing and networking)
+<a href="#heritage">heritage</a> (culture and language)
+<a href="#endeavourheritage">endeavour</a>
 
 [ENDEAVOURS]
 
@@ -277,7 +286,7 @@ Alongside ballistics I also found an interest in optics and acoustics in order t
 <span id="heritage"><strong>HERITAGE</strong></span>
 --------------------------------------------------------------------------------
 
-<em>culture, language, worship</em>
+<em>my native culture, language, and worship, belonging in Ostrobothnia and Finland</em>
 
 [LIST]
 
