--- a/index.html
+++ b/index.html
@@ -62,10 +62,11 @@ Kenneth Forsbäck &#60;<a href="">domain</a>&#62; (Finland)
 
 <em>Ostrobothnian, heathen, and gamer. An amateur designer and engineer in gaming and computing, with specialisation in system design. A native expert, with specialisation in linguistics.</em>
 
+<em>No matter how old I get or how much someone hates it, I will never stop with my three domains and their endeavours. It's what drives me and fills me with energy and hope.</em>
+
 <em>Be professional. Be heartful.</em>
 
 [ACCOUNTS]
-
 (I need to get a domain to centre everything around, that'll make my life easier and make for less accounts and less mess)
 
 [<a href="https://x.com/forsbackkenneth">Kenneth Forsbäck</a>], X (might remove this)
