--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@ Kenneth Forsbäck &#60;<a href="">domain</a>&#62; (Finland)
 
 [<a href="https://x.com/forsbackkenneth">Kenneth Forsbäck</a>], X (might remove this)
 [<a href="https://gamedev.net/kforsback/">Kenneth Forsbäck</a>], GameDev
-[<a href="https://x.com/aspootifulmind">A Spootiful Mind</a>], X
+[<a href="https://x.com/aspootifulmind">A Spootiful Mind</a>], X (my older account from 2014)
 [<a href="https://www.youtube.com/@ASpootifulMind">A Spootiful Mind</a>], YouTube
 
 [DOMAINS]
