--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@ Kenneth Forsbäck &#60;<a href="">domain</a>&#62; (Finland)
 [<a href="https://gamedev.net/kforsback/">Kenneth Forsbäck</a>], GameDev
 [<a href="https://x.com/aspootifulmind">A Spootiful Mind</a>], X (my older account from 2014)
 [<a href="https://www.youtube.com/@ASpootifulMind">A Spootiful Mind</a>], YouTube
-[<a href="https://www.twitch.tv/aspootifulmind">A Spootiful Mind</a>]
+[<a href="https://www.twitch.tv/aspootifulmind">A Spootiful Mind</a>], Twitch
 
 [DOMAINS]
 
