--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@ Kenneth Forsbäck &#60;<a href="">domain</a>&#62; (Finland)
 
 <em>Ostrobothnian, heathen, and gamer. An amateur designer and engineer in gaming and computing, with specialisation in system design. A native expert, with specialisation in linguistics.</em>
 
-<em>No matter how old I get or how much someone hates it, I will never stop with my three domains and related endeavours. It's what drives me and fills me with hope, an irreplacable inspiration and source of motivation. <strong>They are my children that I've taken care of since 2000-2001.</strong> I have filed several police reports (with Finnish police and with the FBI) and will file several more so that I can continue working.</em>
+<em>No matter how old I get or how much someone hates it, I will never stop with my three domains and related endeavours. It's what drives me and fills me with hope, an irreplacable inspiration and source of motivation. <strong>They are my children that I've taken care of since 2000-2001.</strong> I have filed several police reports (with Finnish police and with the FBI) and will file several more so that I can continue working in peace and quiet.</em>
 
 <em>Be professional. Be heartful.</em>
 
