--- a/index.html
+++ b/index.html
@@ -171,6 +171,13 @@ Because of my love for raycasters and simple 3D graphics I have also read up on 
 [<a href="https://gafferongames.com/">Gaffer on Games</a>]
 [<a href="https://fabiensanglard.net/quake3/network.php">Quake 3 Source Code Review: Network Model</a>]
 [<a href="https://fabiensanglard.net/duke3d/build_engine_internals.php">Duke Nukem 3D: Build Engine Internals</a>]
+[<a href="https://libsdl.org/">Simple DirectMedia Layer</a>]
+[<a href="https://liballeg.org/">Allegro</a>]
+[<a href="https://irrlicht.sourceforge.io/">Irrlicht</a>]
+[<a href="https://irrlicht.sourceforge.io/forum/">Irrlicht Forum</a>]
+[<a href="https://gamedev.net/">GameDev</a>]
+[DevMaster]
+[<a href="https://www.rpg.net/">RPGnet</a>]
 
 [NOTES]
 
