--- a/index.html
+++ b/index.html
@@ -81,6 +81,8 @@ strong {
   [<a href="files/longplay.jpg">longplay.jpg</a>]
 <strong>200602</strong>
   A first-person space simulator, focused on various careers in space and running your own company or faction, inspired by Freelancer (2003), Planetes (2003), and EVE Online (2003).
+<strong>201108</strong>
+  A roleplaying system for story-driven gameplay with three attributes (take, hold, give). Inspired by Discworld (1995).
 <strong>201406</strong>
   A system for software rendering and resolution scaling, using texture streaming and using static or dynamic adjustment of resolution, inspired by Irrlicht and GPU scaling.
 <strong>201508</strong>
@@ -161,9 +163,9 @@ Because of my love for raycasters and simple 3D graphics I have also read up on 
 <strong>200512</strong>
   A file system layout inspired by Filesystem Hierarchy Standard.
 <strong>200602</strong>
-  A 32-bit RISC architecture inspired by MIPS R3000 and ARM7TDMI.
+  A 32-bit <a href="files/architecture.jpg">RISC architecture</a> inspired by MIPS R3000 and ARM7TDMI.
 <strong>200602</strong>
-  A 16-bit RISC architecture inspired by ARM7TDMI (Thumb) and Z80.
+  A 16-bit <a href="files/architecture.jpg">RISC architecture</a> inspired by ARM7TDMI (Thumb) and Z80.
 <strong>200602</strong>
   A system for explicit cache management inspired by ARM7TDMI and 6800, allowing for precise control over data flow with separate instructions that guide the processor as to which memory sections are needed. Later expanded by the concept of immediate memory for multiple levels of explicitly managed memory.
 <strong>200608</strong>
@@ -220,7 +222,7 @@ Alongside ballistics I also found an interest in optics and acoustics in order t
 <strong>200602</strong>
   I enrolled at VAMK in 2004 in the hopes of ultimately working with microprocessors and instruction set architectures, but my studies suffered greatly the first year (2004-2005) due to mental health problems and by the second year (2005-2006) I was no longer in attendance. As such my dreams of working as an engineer in my field of ambition were shattered, but I intuitively started learning and designing systems on my own.
   With my personality (INFP) I had been self-driven since childhood and I quickly found solace in my work, able to bear the depression and anxiety that weighed heavily on my spirit and slowly managed to work up motivation.
-  Despite growing up on the x86 architecture and AMD being my processor of choice since K6, I found an interest in older processors such as Z80, 6800, 6502, and ended up falling in love with MIPS and ARM, envisioning them as future desktop architectures.
+  Despite growing up on the x86 architecture and AMD being my processor of choice since K6, I found an interest in older processors such as Z80, 6800, 6502, and ended up falling in love with MIPS and ARM, envisioning them as <a href="files/architecture.jpg">future desktop architectures</a>.
 <strong>200812</strong>
   I stumbled across Steven Faber's web site around 2008 and came to exchange some e-mails with him, wanting to learn ballistics. Before this I had attempted to use rather crude equations that worked as long as you guessed and tweaked the variables correctly, but I was interested in something more accurate.
   He might also have been the one to recommend me McCoy's "bible" on ballistics which I later ended up buying on Amazon. While I lacked, and still lack, the mathematical knowledge to fully make use of all equations, I managed to learn what I needed.
