--- a/index.html
+++ b/index.html
@@ -58,9 +58,11 @@ strong {
 
 <!-- pre -->
 <pre>
-<strong>Kenneth Forsbäck</strong> &#60;<a href="">domain</a>&#62; (Finland)
+<strong>Kenneth Forsbäck</strong> &#60;<a href="http://spootiful.com/">spootiful.com</a>&#62; (Finland)
 
 <em>Ostrobothnian, heathen, and gamer. An amateur designer and engineer in gaming and computing, with specialisation in system design. A native expert, with specialisation in linguistics.</em>
+
+<img src="files/projects.png">
 
 [<a href="notes1.html">notes1</a>]
 
