--- a/index.html
+++ b/index.html
@@ -62,6 +62,8 @@ strong {
 
 <em>Ostrobothnian, heathen, and gamer. An amateur designer and engineer in gaming and computing, with specialisation in system design. A native expert, with specialisation in linguistics.</em>
 
+<img src="media/profile.jpg">
+
 <img src="files/projects.png">
 
 [<a href="notes1.html">notes1</a>]
