--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@ strong {
 
 <!-- pre -->
 <pre>
-<strong>Kenneth Forsbäck</strong> &#60;<a href="http://spootiful.com/">spootiful.com</a>&#62; (Finland)
+<strong>Kenneth Forsbäck</strong> (<a href="https://spootiful.com/">spootiful.com</a>) &#60;<a href="mailto:spootiful@spootiful.com">spootiful.com</a>&#62; (Finland)
 
 <em>Ostrobothnian, heathen, and gamer. An amateur designer and engineer in gaming and computing, with specialisation in system design. A native expert, with specialisation in linguistics.</em>
 
