--- a/index.html
+++ b/index.html
@@ -37,12 +37,14 @@ a {
   color: #56b6c2;
 }
 body {
-  font-family: "Consolas", monospace;
+  font-family: "Consolas", "Courier New", monospace;
   font-size: 1rem;
   color: #abb2b2;
   background-color: #282c34;
 }
 pre {
+  font-family: "Consolas", "Courier New", monospace;
+  font-size: 1rem;
 	max-width: 80ch;
 	white-space: pre-wrap;
 }
