--- a/index.html
+++ b/index.html
@@ -54,6 +54,22 @@ a {
 
 <img src="files/projects_2.png">
 
+<strong>QDirStat</strong>
+
+<img src="files/Gaming File Age Statistics.jpg">
+<img src="files/Gaming File Size Statistics.jpg">
+<img src="files/Gaming File Type Statistics.jpg">
+<img src="files/Storying File Age Statistics.jpg">
+<img src="files/Computing File Age Statistics.jpg">
+<img src="files/Computing File Size Statistics.jpg">
+<img src="files/Computing File Type Statistics.jpg">
+<img src="files/Heritage File Age_Statistics.jpg">
+<img src="files/Heritage File Size Statistics.jpg">
+<img src="files/Heritage File Type Statistics.jpg">
+<img src="files/Reference File Age_Statistics.jpg">
+<img src="files/Reference File Size Statistics.jpg">
+<img src="files/Reference File Type Statistics.jpg">
+
 [<a href="notes1.html">notes1</a>]
 
 <span id="arts"><strong>ARTS</strong></span>
