--- a/index.html
+++ b/index.html
@@ -50,25 +50,26 @@ a {
 
 <img src="files/profile.jpg">
 
-<img src="files/projects_1.png">
+<strong>Projects</strong>
 
-<img src="files/projects_2.png">
+<a href="files/projects_1.png">Treesize Structure</a>
+<a href="files/projects_2.png">Explorer Properties</a>
 
 <strong>QDirStat</strong>
 
-<img src="files/Gaming File Age Statistics.jpg">
-<img src="files/Gaming File Size Statistics.jpg">
-<img src="files/Gaming File Type Statistics.jpg">
-<img src="files/Storying File Age Statistics.jpg">
-<img src="files/Computing File Age Statistics.jpg">
-<img src="files/Computing File Size Statistics.jpg">
-<img src="files/Computing File Type Statistics.jpg">
-<img src="files/Heritage File Age_Statistics.jpg">
-<img src="files/Heritage File Size Statistics.jpg">
-<img src="files/Heritage File Type Statistics.jpg">
-<img src="files/Reference File Age_Statistics.jpg">
-<img src="files/Reference File Size Statistics.jpg">
-<img src="files/Reference File Type Statistics.jpg">
+<a href="files/Gaming File Age Statistics.jpg">Gaming: File Age</a>
+<a href="files/Gaming File Size Statistics.jpg">Gaming: File Size</a>
+<a href="files/Gaming File Type Statistics.jpg">Gaming: File Type</a>
+<a href="files/Storying File Age Statistics.jpg">Storying: File Age</a>
+<a href="files/Computing File Age Statistics.jpg">Computing: File Age</a>
+<a href="files/Computing File Size Statistics.jpg">Computing: File Size</a>
+<a href="files/Computing File Type Statistics.jpg">Computing: File Type</a>
+<a href="files/Heritage File Age_Statistics.jpg">Heritage: File Age</a>
+<a href="files/Heritage File Size Statistics.jpg">Heritage: File Size</a>
+<a href="files/Heritage File Type Statistics.jpg">Heritage: File Type</a>
+<a href="files/Reference File Age_Statistics.jpg">Reference: File Age</a>
+<a href="files/Reference File Size Statistics.jpg">Reference: File Size</a>
+<a href="files/Reference File Type Statistics.jpg">Reference: File Type</a>
 
 [<a href="notes1.html">notes1</a>]
 
