--- a/index.html
+++ b/index.html
@@ -21,14 +21,18 @@
 
 <style>
 body {
+  /* colour */
+	color: #e9eaeb;
+	background-color: #0d1117;
+  /* type */
   font-family: "Liberation Mono", "Consolas", "Courier New", monospace;
   font-size: 1rem;
-  color: #abb2b2;
-  background-color: #282c34;
 }
 pre {
+  /* layout */
 	max-width: 80ch;
 	margin: 0 auto;
+	/* type */
 	white-space: pre-wrap;
 }
 strong {
