--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@ a {
 
 <em>Ostrobothnian, heathen, and gamer. An amateur designer and engineer in gaming and computing, with specialisation in system design. A native expert, with specialisation in linguistics.</em>
 
-<img src="files/profile.jpg">
+<img style="text-align: center;" src="files/profile2.jpg">
 
 <strong>Projects</strong>
 
